<resources>
    <string name="app_name">Scheduled TimeLapse</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Default Strings-->
    <string name="default_project_name">TimeLapse Project</string>

    <!--Navigation Side Menu-->
    <string name="navigation_camera_view">Camera View</string>
    <string name="navigation_gallery">Gallery</string>
    <string name="navigation_user_manual">User\'s Manual</string>
    <string name="navigation_new_photo_project">New Photo Project</string>
    <string name="nav_drawer_communicate">Communicate</string>
    <string name="nav_drawer_rate_this_app">Rate this app</string>
    <string name="nav_user_name">User Name</string>

    <!--Project Activity-->
    <string name="project_main_name">New Project</string>
    <string name="user_manual_name">User Manual</string>
    <string name="camera_settings_name">Camera Settings</string>
    <string name="camera_iso">Camera ISO:</string>
    <string name="file_format">File Format</string>
    <string name="focus">Focus</string>
    <string name="flash">Flash</string>
    <string name="card_subtitle_frequency">0hz</string>
    <string name="card_subtitle_start">0am</string>
    <string name="card_subtitle_end">0pm</string>
    <string name="card_subtitle_active">Active</string>
    <string name="card_subtitle_inactive">Inactive</string>

    <!--New Project-->
    <string name="datetime_row_title">Title</string>
    <string name="new_project_title">Title</string>
    <string name="new_project_frequency">Frequency</string>
    <string name="new_project_sample_date">Tue, Jul 24, 2016</string>
    <string name="new_project_sample_time">12:12 pm</string>


    <!--Content Description Strings-->
    <string name="nav_header_image_cd">App Icon</string>
    <string name="nav_user_email">User_email@email.com</string>
    <string name="appwidget_example_title_text">Moon: </string>
    <string name="appwidget_exmaple_time_text">Tue, Jun 12, 12:36 am </string>
    <string name="add_widget">Add widget</string>
    <string name="project_card_expired">Expired</string>
    <string name="project_card_active">Active</string>
    <string name="project_card_inactive">Inactive</string>
    <string name="widget_no_active_projects">No active Projects</string>
    <string name="project_update_button_text">Update Project</string>
    <string name="invalid_time_prompt">Invalid Time set, End Time can\'t be before start Time</string>
    <string name="add_project_button_text">Add Project</string>
    <string name="activate_project_new_project">Activate Project</string>
    <string name="picture_size_settings">Picture Size</string>
    <string name="create_new_project_fab">Create New Project</string>
    <string name="camera_preview_text">Camera Preview</string>
    <string name="project_error_must_have_title">Must have a Title</string>
    <string name="new_project_invalid_char">"Invalid Character "</string>
    <string name="new_project_invalid_frequency">Invalid frequency</string>
    <string name="new_project_invalid_freq_range">Sorry frequency must be less than 0.1 and greater than 0</string>
    <string name="scheduled_timelaspe_title">Scheduled Timelaspe</string>
    <string name="high_res_timelapse">High Res Timelapse</string>
</resources>
