<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/navigation_camera_view" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navigation_gallery" />
        <item
            android:id="@+id/nav_user_manual"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navigation_user_manual" />
    </group>

    <item android:title="@string/nav_drawer_communicate">
        <menu>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_drawer_rate_this_app" />
        </menu>
    </item>

</menu>
