<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/new_project_view">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleEditText"
            android:layout_weight="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:hint="@string/new_project_title"
            android:maxLength="50"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/frequencyEditText"
            android:layout_weight="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:hint="@string/new_project_frequency"
            android:inputType="numberDecimal"
            android:maxLength="10" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/startDateEditText"
                android:layout_weight="1"
                android:inputType="none"
                android:text="@string/new_project_sample_date"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/startTimeEditText"
                android:layout_weight="1"
                android:elegantTextHeight="false"
                android:inputType="none"
                android:text="@string/new_project_sample_time"
                android:textSize="16sp" />


        </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:id="@+id/end_time_view">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/endDateEditText"
                android:layout_weight="1"
                android:inputType="none"
                android:text="@string/new_project_sample_date"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/endTimeEditText"
                android:layout_weight="1"
                android:inputType="none"
                android:text="@string/new_project_sample_time"
                android:textSize="16sp" />

    </LinearLayout>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activate_project_new_project"
        android:id="@+id/projectActiveSwitch"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:showText="false"
        android:singleLine="false"
        android:splitTrack="false"
        android:switchPadding="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_project_button_text"
        android:id="@+id/addProjectButton"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp" />

</LinearLayout>